src/main/java/org/einnovator/markup/sass/antlr/ScssParser.java
package org.einnovator.markup.sass.antlr;

// Generated from ScssParser.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ScssParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NULL=1, IN=2, Unit=3, COMBINE_COMPARE=4, Ellipsis=5, InterpolationStart=6, 
		LPAREN=7, RPAREN=8, BlockStart=9, BlockEnd=10, LBRACK=11, RBRACK=12, GT=13, 
		TIL=14, LT=15, COLON=16, SEMI=17, COMMA=18, DOT=19, DOLLAR=20, AT=21, 
		AND=22, HASH=23, COLONCOLON=24, PLUS=25, TIMES=26, DIV=27, MINUS=28, PERC=29, 
		UrlStart=30, EQEQ=31, NOTEQ=32, EQ=33, PIPE_EQ=34, TILD_EQ=35, MIXIN=36, 
		FUNCTION=37, AT_ELSE=38, IF=39, AT_IF=40, AT_FOR=41, AT_WHILE=42, AT_EACH=43, 
		INCLUDE=44, IMPORT=45, RETURN=46, FROM=47, THROUGH=48, POUND_DEFAULT=49, 
		Identifier=50, StringLiteral=51, Number=52, Color=53, WS=54, SL_COMMENT=55, 
		COMMENT=56, UrlEnd=57, Url=58, SPACE=59, InterpolationStartAfter=60, IdentifierAfter=61;
	public static final int
		RULE_stylesheet = 0, RULE_statement = 1, RULE_params = 2, RULE_param = 3, 
		RULE_variableName = 4, RULE_paramOptionalValue = 5, RULE_mixinDeclaration = 6, 
		RULE_includeDeclaration = 7, RULE_functionDeclaration = 8, RULE_functionBody = 9, 
		RULE_functionReturn = 10, RULE_functionStatement = 11, RULE_commandStatement = 12, 
		RULE_mathCharacter = 13, RULE_mathStatement = 14, RULE_expression = 15, 
		RULE_ifDeclaration = 16, RULE_elseIfStatement = 17, RULE_elseStatement = 18, 
		RULE_conditions = 19, RULE_condition = 20, RULE_variableDeclaration = 21, 
		RULE_forDeclaration = 22, RULE_fromNumber = 23, RULE_throughNumber = 24, 
		RULE_whileDeclaration = 25, RULE_eachDeclaration = 26, RULE_eachValueList = 27, 
		RULE_identifierListOrMap = 28, RULE_identifierValue = 29, RULE_importDeclaration = 30, 
		RULE_referenceUrl = 31, RULE_mediaTypes = 32, RULE_nested = 33, RULE_nest = 34, 
		RULE_ruleset = 35, RULE_block = 36, RULE_selectors = 37, RULE_selector = 38, 
		RULE_selectorPrefix = 39, RULE_element = 40, RULE_pseudo = 41, RULE_attrib = 42, 
		RULE_attribRelate = 43, RULE_identifier = 44, RULE_identifierPart = 45, 
		RULE_identifierVariableName = 46, RULE_property = 47, RULE_values = 48, 
		RULE_url = 49, RULE_measurement = 50, RULE_functionCall = 51;
	private static String[] makeRuleNames() {
		return new String[] {
			"stylesheet", "statement", "params", "param", "variableName", "paramOptionalValue", 
			"mixinDeclaration", "includeDeclaration", "functionDeclaration", "functionBody", 
			"functionReturn", "functionStatement", "commandStatement", "mathCharacter", 
			"mathStatement", "expression", "ifDeclaration", "elseIfStatement", "elseStatement", 
			"conditions", "condition", "variableDeclaration", "forDeclaration", "fromNumber", 
			"throughNumber", "whileDeclaration", "eachDeclaration", "eachValueList", 
			"identifierListOrMap", "identifierValue", "importDeclaration", "referenceUrl", 
			"mediaTypes", "nested", "nest", "ruleset", "block", "selectors", "selector", 
			"selectorPrefix", "element", "pseudo", "attrib", "attribRelate", "identifier", 
			"identifierPart", "identifierVariableName", "property", "values", "url", 
			"measurement", "functionCall"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'null'", "'in'", null, null, "'...'", null, "'('", "')'", "'{'", 
			"'}'", "'['", "']'", "'>'", "'~'", "'<'", "':'", "';'", "','", "'.'", 
			"'$'", "'@'", "'&'", "'#'", "'::'", "'+'", "'*'", "'/'", "'-'", "'%'", 
			null, "'=='", "'!='", "'='", "'|='", "'~='", "'@mixin'", "'@function'", 
			"'@else'", "'if'", "'@if'", "'@for'", "'@while'", "'@each'", "'@include'", 
			"'@import'", "'@return'", "'from'", "'through'", "'!default'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NULL", "IN", "Unit", "COMBINE_COMPARE", "Ellipsis", "InterpolationStart", 
			"LPAREN", "RPAREN", "BlockStart", "BlockEnd", "LBRACK", "RBRACK", "GT", 
			"TIL", "LT", "COLON", "SEMI", "COMMA", "DOT", "DOLLAR", "AT", "AND", 
			"HASH", "COLONCOLON", "PLUS", "TIMES", "DIV", "MINUS", "PERC", "UrlStart", 
			"EQEQ", "NOTEQ", "EQ", "PIPE_EQ", "TILD_EQ", "MIXIN", "FUNCTION", "AT_ELSE", 
			"IF", "AT_IF", "AT_FOR", "AT_WHILE", "AT_EACH", "INCLUDE", "IMPORT", 
			"RETURN", "FROM", "THROUGH", "POUND_DEFAULT", "Identifier", "StringLiteral", 
			"Number", "Color", "WS", "SL_COMMENT", "COMMENT", "UrlEnd", "Url", "SPACE", 
			"InterpolationStartAfter", "IdentifierAfter"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ScssParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ScssParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StylesheetContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StylesheetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stylesheet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).enterStylesheet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).exitStylesheet(this);
		}
	}

	public final StylesheetContext stylesheet() throws RecognitionException {
		StylesheetContext _localctx = new StylesheetContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stylesheet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << InterpolationStart) | (1L << DOT) | (1L << DOLLAR) | (1L << AT) | (1L << AND) | (1L << HASH) | (1L << TIMES) | (1L << MIXIN) | (1L << FUNCTION) | (1L << AT_IF) | (1L << AT_FOR) | (1L << AT_WHILE) | (1L << AT_EACH) | (1L << INCLUDE) | (1L << IMPORT) | (1L << Identifier))) != 0)) {
				{
				{
				setState(104);
				statement();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ImportDeclarationContext importDeclaration() {
			return getRuleContext(ImportDeclarationContext.class,0);
		}
		public NestedContext nested() {
			return getRuleContext(NestedContext.class,0);
		}
		public RulesetContext ruleset() {
			return getRuleContext(RulesetContext.class,0);
		}
		public MixinDeclarationContext mixinDeclaration() {
			return getRuleContext(MixinDeclarationContext.class,0);
		}
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public IncludeDeclarationContext includeDeclaration() {
			return getRuleContext(IncludeDeclarationContext.class,0);
		}
		public IfDeclarationContext ifDeclaration() {
			return getRuleContext(IfDeclarationContext.class,0);
		}
		public ForDeclarationContext forDeclaration() {
			return getRuleContext(ForDeclarationContext.class,0);
		}
		public WhileDeclarationContext whileDeclaration() {
			return getRuleContext(WhileDeclarationContext.class,0);
		}
		public EachDeclarationContext eachDeclaration() {
			return getRuleContext(EachDeclarationContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(121);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IMPORT:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				importDeclaration();
				}
				break;
			case AT:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				nested();
				}
				break;
			case InterpolationStart:
			case DOT:
			case AND:
			case HASH:
			case TIMES:
			case Identifier:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				ruleset();
				}
				break;
			case MIXIN:
				enterOuterAlt(_localctx, 4);
				{
				setState(113);
				mixinDeclaration();
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 5);
				{
				setState(114);
				functionDeclaration();
				}
				break;
			case DOLLAR:
				enterOuterAlt(_localctx, 6);
				{
				setState(115);
				variableDeclaration();
				}
				break;
			case INCLUDE:
				enterOuterAlt(_localctx, 7);
				{
				setState(116);
				includeDeclaration();
				}
				break;
			case AT_IF:
				enterOuterAlt(_localctx, 8);
				{
				setState(117);
				ifDeclaration();
				}
				break;
			case AT_FOR:
				enterOuterAlt(_localctx, 9);
				{
				setState(118);
				forDeclaration();
				}
				break;
			case AT_WHILE:
				enterOuterAlt(_localctx, 10);
				{
				setState(119);
				whileDeclaration();
				}
				break;
			case AT_EACH:
				enterOuterAlt(_localctx, 11);
				{
				setState(120);
				eachDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ScssParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ScssParser.COMMA, i);
		}
		public TerminalNode Ellipsis() { return getToken(ScssParser.Ellipsis, 0); }
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).exitParams(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_params);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			param();
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(124);
				match(COMMA);
				setState(125);
				param();
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Ellipsis) {
				{
				setState(131);
				match(Ellipsis);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public VariableNameContext variableName() {
			return getRuleContext(VariableNameContext.class,0);
		}
		public ParamOptionalValueContext paramOptionalValue() {
			return getRuleContext(ParamOptionalValueContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).exitParam(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_param);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			variableName();
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(135);
				paramOptionalValue();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableNameContext extends ParserRuleContext {
		public TerminalNode DOLLAR() { return getToken(ScssParser.DOLLAR, 0); }
		public TerminalNode Identifier() { return getToken(ScssParser.Identifier, 0); }
		public VariableNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).enterVariableName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).exitVariableName(this);
		}
	}

	public final VariableNameContext variableName() throws RecognitionException {
		VariableNameContext _localctx = new VariableNameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variableName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(DOLLAR);
			setState(139);
			match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamOptionalValueContext extends ParserRuleContext {
		public TerminalNode COLON() { return getToken(ScssParser.COLON, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ParamOptionalValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramOptionalValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).enterParamOptionalValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).exitParamOptionalValue(this);
		}
	}

	public final ParamOptionalValueContext paramOptionalValue() throws RecognitionException {
		ParamOptionalValueContext _localctx = new ParamOptionalValueContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_paramOptionalValue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(COLON);
			setState(143); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(142);
				expression();
				}
				}
				setState(145); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NULL) | (1L << InterpolationStart) | (1L << DOLLAR) | (1L << UrlStart) | (1L << Identifier) | (1L << StringLiteral) | (1L << Number) | (1L << Color))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MixinDeclarationContext extends ParserRuleContext {
		public TerminalNode MIXIN() { return getToken(ScssParser.MIXIN, 0); }
		public TerminalNode Identifier() { return getToken(ScssParser.Identifier, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(ScssParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(ScssParser.RPAREN, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public MixinDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mixinDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).enterMixinDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).exitMixinDeclaration(this);
		}
	}

	public final MixinDeclarationContext mixinDeclaration() throws RecognitionException {
		MixinDeclarationContext _localctx = new MixinDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_mixinDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			match(MIXIN);
			setState(148);
			match(Identifier);
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(149);
				match(LPAREN);
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==DOLLAR) {
					{
					setState(150);
					params();
					}
				}

				setState(153);
				match(RPAREN);
				}
			}

			setState(156);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeDeclarationContext extends ParserRuleContext {
		public TerminalNode INCLUDE() { return getToken(ScssParser.INCLUDE, 0); }
		public TerminalNode Identifier() { return getToken(ScssParser.Identifier, 0); }
		public TerminalNode SEMI() { return getToken(ScssParser.SEMI, 0); }
		public TerminalNode LPAREN() { return getToken(ScssParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(ScssParser.RPAREN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ValuesContext values() {
			return getRuleContext(ValuesContext.class,0);
		}
		public IncludeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_includeDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).enterIncludeDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).exitIncludeDeclaration(this);
		}
	}

	public final IncludeDeclarationContext includeDeclaration() throws RecognitionException {
		IncludeDeclarationContext _localctx = new IncludeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_includeDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(INCLUDE);
			setState(159);
			match(Identifier);
			setState(174);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SEMI:
				{
				setState(160);
				match(SEMI);
				}
				break;
			case NULL:
			case InterpolationStart:
			case LPAREN:
			case BlockStart:
			case BlockEnd:
			case DOT:
			case DOLLAR:
			case AT:
			case AND:
			case HASH:
			case TIMES:
			case UrlStart:
			case MIXIN:
			case FUNCTION:
			case AT_IF:
			case AT_FOR:
			case AT_WHILE:
			case AT_EACH:
			case INCLUDE:
			case IMPORT:
			case RETURN:
			case Identifier:
			case StringLiteral:
			case Number:
			case Color:
				{
				setState(169);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(161);
					match(LPAREN);
					setState(163);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NULL) | (1L << InterpolationStart) | (1L << LPAREN) | (1L << DOLLAR) | (1L << UrlStart) | (1L << Identifier) | (1L << StringLiteral) | (1L << Number) | (1L << Color))) != 0)) {
						{
						setState(162);
						values();
						}
					}

					setState(165);
					match(RPAREN);
					setState(167);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==SEMI) {
						{
						setState(166);
						match(SEMI);
						}
					}

					}
					break;
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==BlockStart) {
					{
					setState(171);
					block();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDeclarationContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(ScssParser.FUNCTION, 0); }
		public TerminalNode Identifier() { return getToken(ScssParser.Identifier, 0); }
		public TerminalNode LPAREN() { return getToken(ScssParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(ScssParser.RPAREN, 0); }
		public TerminalNode BlockStart() { return getToken(ScssParser.BlockStart, 0); }
		public TerminalNode BlockEnd() { return getToken(ScssParser.BlockEnd, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).enterFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ScssParserListener ) ((ScssParserListener)listener).exitFunctionDeclaration(this);
		}
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_functionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(FUNCTION);
			setState(177);
			match(Identifier);
			setState(178);
			match(LPAREN);
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DOLLAR) {
				{
				setState(179);
				params();
				}
			}

			setState(182);
			match(RPAREN);
			setState(183);
			match(BlockStart);
			setState(185);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NULL) | (1L << InterpolationStart) | (1L << LPAREN) | (1L << DOT) | (1L << DOLLAR) | (1L << AT) | (1L << AND) | (1L << HASH) | (1L << TIMES) | (1L << UrlStart) | (1L << MIXIN) | (1L << FUNCTION) | (1L << AT_IF) | (1L << AT_FOR) | (1L << AT_WHILE) | (1L << AT_EACH) | (1L << INCLUDE) | (1L << IMPORT) | (1L << RETURN) | (1L << Identifier) | (1L << StringLiteral) | (1L << Number) | (1L << Color))) != 0)) {
				{
				setState(184);
				functionBody();
				}
			}

			setState(187);
			match(BlockEnd);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionBodyContext extends ParserRuleContext {
		public FunctionReturnContext functionReturn() {
			return getRuleContext(FunctionReturnContext.class,0);
		}
		public List<FunctionStatementContext> functionStatement() {
			return getRuleContexts(FunctionStatementContext.class);
		}
